--- a/reactjs/src/css/main.scss
+++ b/reactjs/src/css/main.scss
@@ -6,26 +6,36 @@
     background-color: rgb(0, 48, 0);
     max-height: 60px;
 
-    a,a:hover{
+    a, a:hover, a:visited, a:link{
         color: white ; 
         font-size: 20px;
         text-decoration: none;
         position: relative;
+        min-width: 100%;
 
     }
 
-    .input-group{
-        width: 30%;
+    form{
+        padding-inline: 40px;
+        flex:2;
     }
 
-    ul{
+    .dropdown-menu{
         li{
             a{
                 color:black ;
+                font-size:14px;
             }
         }
         
     }
+    .dropdown-toggle{
+        font-size:14px;
+    }
+
+    
+
+    
 }
 
 
@@ -39,8 +49,12 @@
    justify-content: center;
 
 
-   a{
+   .btn-category, .btn-category:active{
+    padding-block:0px;
     padding-inline:16px;
+    color: inherit;
+    text-decoration: none;
+    
    }
 }
 
@@ -63,4 +77,15 @@
 
 .cartbtn{
     float: right;
+}
+
+
+
+.products-list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 60px;
+
+
 }
