Searching + user registration
 Made a searching on the main page wite categories dropdown also
 + Made user registration, login and logout with djano user model
 and react js cookie + added hook for doing body styles only for
 specific page (because in singe page body style overrides in every
 route)

--- a/reactjs/src/css/bootstrapwrapper.scss
+++ b/reactjs/src/css/bootstrapwrapper.scss
@@ -1,2 +1,2 @@
-$enable-important-utilities: false; //this disables !important
-@import "../../node_modules/bootstrap/scss/bootstrap";
+// $enable-important-utilities: false; //this disables !important
+// @import "../../node_modules/bootstrap/scss/bootstrap";
