--- a/reactjs/src/css/productDetails.scss
+++ b/reactjs/src/css/productDetails.scss
@@ -1,16 +1,52 @@
-.card-detail{
-    width: 26rem;
 
+.product-container{
+    padding: 2% 8%;
 
 }
+
 
 
 .gallery{
     position: sticky;
     height: 100%;
-    display: block;
+    display: flex;
+    flex-direction: row;
     float:left;
+
+    div{
+        img{
+        max-width: 100%;
+        object-fit: contain;
+        
+        }
+    }
+
+    .gallery-images{
+        // width: 120px;
+        // height: 120px;
+        list-style: none;
+        float:left;
+        padding-inline: 10px;
+       
+        li{
+            padding: 2px 2px;
+            border-radius: 8px;
+            border: 2px solid rgb(187, 187, 187);
+            margin-block: 10px;
+        }
+        
+
+        img{
+            border-radius: 8px;
+            width: 75px;
+            height: 75px;
+            object-fit: contain;
+        }
+
+
+    }
 }
+
 
 
 .card{
