--- a/reactjs/src/css/main.scss
+++ b/reactjs/src/css/main.scss
@@ -3,7 +3,7 @@
 @import './bodyStyles';
 
 .navbar{ 
-    padding-inline: 30px;
+    //padding-inline: 30px;
     background-color: rgb(0, 48, 0);
     max-height: 60px;
 
@@ -12,13 +12,13 @@
         font-size: 20px;
         text-decoration: none;
         position: relative;
-        min-width: 100%;
-
+        margin:0 10px;
     }
 
     form{
-        padding-inline: 2%;
-        flex:2;
+        padding-inline: 10%;
+        flex: 2;
+        
     }
 
     .dropdown-menu{
@@ -61,32 +61,31 @@
 
 
 .container{
-
+    
     padding-block: 40px;
-}
-
-
-.card{
-    width: 18rem;
-    img{
-
-        width: 100%;
-        height: 250px;
-        object-fit: cover;
+    .products-list{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 60px;
+    
+        .card{
+            width: 18rem;
+            img{
+                width: 100%;
+                height: 250px;
+                object-fit: contain;
+            }
+    
+            .cartbtn{
+                float: right;
+            }
+        }
+        
+    
+    
     }
 }
 
-.cartbtn{
-    float: right;
-}
 
 
-
-.products-list{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 60px;
-
-
-}
