productById bug fix + active image to product details
now it is showing on product details page what image is selected and
fixed bug with product by id query that happened when i refactored the
code

--- a/reactjs/src/css/productDetails.scss
+++ b/reactjs/src/css/productDetails.scss
@@ -34,6 +34,10 @@
             border: 2px solid rgb(187, 187, 187);
             margin-block: 10px;
         }
+
+        .active{
+            border: 2px solid rgb(35, 164, 240);
+        }
         
 
         img{
@@ -42,6 +46,8 @@
             height: 50px;
             object-fit: contain;
         }
+
+        
 
 
     }
