Basic Checkout + gql folder for queries
Made gql folder for gql queries and mutation constants
And made basic demo checkout page, need to make yup validation and other
thing

--- a/reactjs/src/css/cart.scss
+++ b/reactjs/src/css/cart.scss
@@ -16,8 +16,10 @@
 
     .card{
         width: 20rem;
-        height: 100%;
+        float:right;
+        padding-inline: 20px;
     }
+    
 }
 
 
