Characteristics and select fields for shipping
Added characterstics for products and display them in read more page
also added select fields in checkout page for shipping adress
country - takes from database from available countries
and states and cities are requested from third party source by python
requests library

--- a/reactjs/src/css/productDetails.scss
+++ b/reactjs/src/css/productDetails.scss
@@ -2,6 +2,14 @@
 .product-container{
     padding: 2% 8%;
 
+
+    .characteristics-table{
+        list-style-type:none; 
+        padding:0px; 
+        width:50%; 
+        font-weight:500;
+    }
+
 }
 
 
