--- a/reactjs/src/css/checkout.scss
+++ b/reactjs/src/css/checkout.scss
@@ -15,6 +15,11 @@
             width:100%;
             margin-bottom: 24px;
         }
+        .select-form-control{
+            width:100%;
+            margin-bottom: 24px;
+
+        }
     }
     
     a{
