Backcend refactoring + small bufixed and features
Added different apps for cart, shipping and products

made react-select field return only value and adapted it to my code and
mutations using custom component wrappers over react-select

changed quantity dropdown a little bit by setting it max height

added style to characteristics table

made link from cart item to product detail

made navbar home button reset product context

--- a/reactjs/src/css/cart.scss
+++ b/reactjs/src/css/cart.scss
@@ -17,7 +17,7 @@
     .card{
         width: 20rem;
         float:right;
-        padding-inline: 20px;
+        padding: 20px;
     }
     
 }
@@ -52,6 +52,11 @@
         .quantity{
             bottom: 0;
             position:absolute;
+
+            .dropdown-menu{
+                overflow-y:scroll; 
+                max-height:200px;
+            }
         }
     }
 
