--- a/reactjs/src/css/productDetails.scss
+++ b/reactjs/src/css/productDetails.scss
@@ -1,91 +1,127 @@
 
 .product-container{
     padding: 2% 8%;
+    height: fit-content;
 
-
-    .characteristics-table{
-        list-style-type:none; 
-        padding:0px; 
-        width:50%; 
-        font-weight:500;
-    }
-
-}
-
-
-
-.gallery{
-    position: sticky;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    float:left;
-
-    div{
-        img{
-        max-width: 100%;
-        object-fit: contain;
-        
-        }
-    }
-
-    .gallery-images{
-        // width: 120px;
-        // height: 120px;
-        list-style: none;
-        float:left;
-        padding-inline: 10px;
-       
-        li{
-            padding: 2px 2px;
-            border-radius: 8px;
-            border: 2px solid rgb(187, 187, 187);
-            margin-block: 10px;
-        }
-
-        .active{
-            border: 2px solid rgb(35, 164, 240);
-        }
-        
-
-        img{
-            border-radius: 8px;
-            width: 50px;
-            height: 50px;
-            object-fit: contain;
-        }
-
-        
-
-
-    }
-}
-
-
-
-.card{
-    padding-block: 20px;
-    width: 16rem;
-    .form-control{
-        width: 50%;
-        text-align-last: center;
-    }
     
 
-    .card-btns{
-        text-align: center;
-        padding-block: 10px;
+    .characteristics-scroll-div{
+        overflow-y: scroll;
+        padding-top: 10px;
+        height: 20%;
 
-        .card-buy-btns{
-            margin-block: 30px;
+        .characteristics-table{
+            list-style-type:none; 
+            width: fit-content;
+            font-weight:500;
 
-            button{
-                margin-block: 6px;
-                min-width: 50%;
+        }
+
+        td{
+            padding:4px 12px;
+
+        }
+    }
+
+    .description-short{
+        white-space: pre-wrap;
+        padding-inline:2%;
+        width: 100%;
+        overflow: hidden;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 10;
+        display: -webkit-box;
+    }
+
+    .description-full{
+        white-space: 0;
+        padding-inline:4%;
+        
+    }
+
+
+    .gallery{
+        position: sticky;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        float:left;
+    
+        div{
+            img{
+            max-width: 100%;
+            object-fit: contain;
+            
+            }
+        }
+    
+        .gallery-images{
+            // width: 120px;
+            // height: 120px;
+            list-style: none;
+            float:left;
+            padding-inline: 10px;
+           
+            li{
+                padding: 2px 2px;
+                border-radius: 8px;
+                border: 2px solid rgb(187, 187, 187);
+                margin-block: 10px;
+            }
+    
+            .active{
+                border: 2px solid rgb(35, 164, 240);
+            }
+            
+    
+            img{
+                border-radius: 8px;
+                width: 50px;
+                height: 50px;
+                object-fit: contain;
+            }
+    
+        }
+    }
+    
+    
+    
+    .card{
+        padding-block: 20px;
+        width: 16rem;
+        height: fit-content;
+        .form-control{
+            width: 50%;
+            text-align-last: center;
+        }
+        
+    
+        .card-btns{
+            text-align: center;
+            padding-block: 10px;
+
+            .dropdown-menu{
+                overflow-y:scroll; 
+                max-height:200px;
+            }
+    
+            .card-buy-btns{
+                margin-block: 30px;
+    
+                button{
+                    margin-block: 6px;
+                    min-width: 50%;
+                }
+    
             }
 
         }
+        
+        
     }
-    
-    
+
+
 }
+
+
+
