--- a/reactjs/src/css/productDetails.scss
+++ b/reactjs/src/css/productDetails.scss
@@ -4,7 +4,6 @@
     height: fit-content;
 
     
-
     .characteristics-scroll-div{
         overflow-y: scroll;
         padding-top: 10px;
@@ -29,13 +28,14 @@
         width: 100%;
         overflow: hidden;
         -webkit-box-orient: vertical;
+        line-clamp: 10;
         -webkit-line-clamp: 10;
         display: -webkit-box;
     }
 
     .description-full{
         white-space: 0;
-        padding-inline:4%;
+        padding:4% 4%;
         
     }
 
@@ -46,11 +46,11 @@
         display: flex;
         flex-direction: row;
         float:left;
-    
+       
         div{
             img{
-            max-width: 100%;
-            object-fit: contain;
+                object-fit: contain;
+                max-width: 100%;
             
             }
         }
@@ -122,6 +122,8 @@
 
 
 }
+
+
 
 
 
