--- a/reactjs/src/css/main.scss
+++ b/reactjs/src/css/main.scss
@@ -68,7 +68,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         gap: 44px;
-        //justify-content: center;
+        justify-content: flex-start;
         
     
         .card{
