--- a/reactjs/src/css/adminpanel.scss
+++ b/reactjs/src/css/adminpanel.scss
@@ -2,25 +2,45 @@
 $content-background-color: rgb(255, 255, 255);
 $odd-child-background-color: rgb(136, 161, 136);
 $even-child-background-color: rgb(20, 59, 20);
-$sidebar-width: 25%;
-$other-content-width: 100% - $sidebar-width;
+$sidebar-width: 25vw;
+$other-content-width: 100vw - $sidebar-width;
+
+$navbar-height: 6vh;
+$height-after-navbar: 94vh;
+
+.nav-wrapper{
+    background-color: rgb(0, 48, 0);
+    height: $navbar-height;
+    display: flex;             /* establish flex container */
+    align-items: center;       /* center ul container vertically */
+    flex-direction: row;
+
+    width: 100%;
+    a, a:hover{
+
+        color: white;
+        text-decoration: none;
+    }
+}
 
 
 
 .sidebar{
     margin: 0;
     padding: 0;
-    height: 100vh;
-    min-height: 100vh;
+    height: $height-after-navbar;
+    min-height: $height-after-navbar;
+    position:fixed;
+
     overflow-y: scroll;
 
-    scrollbar-width: none; 
-    -ms-overflow-style: none; 
+    // scrollbar-width: none; 
+    // -ms-overflow-style: none; 
    
     width: $sidebar-width;
     float:left;
-    min-width: fit-content;
-    position: fixed;
+
+
 
     background-color: #f2ffee;
 
@@ -44,7 +64,7 @@ $other-content-width: 100% - $sidebar-width;
                 padding-inline: 20px;
                 padding-block: 2px;
                 font-weight: 500;
-              }
+            }
             
 
             // #888787
@@ -54,6 +74,10 @@ $other-content-width: 100% - $sidebar-width;
             }
             tr:nth-child(even) {
                 background-color: $even-child-background-color;
+            }
+
+            .create-button{
+                float:'right'
             }
         }
     }
@@ -69,7 +93,7 @@ $other-content-width: 100% - $sidebar-width;
     width: $other-content-width;
     float:inline-end;
     color:white;
-    min-height: 100vh;
+    min-height: $height-after-navbar;
     max-height: fit-content;
 
     padding: 1% 2%;
@@ -86,6 +110,11 @@ $other-content-width: 100% - $sidebar-width;
         tr:nth-child(even) {
             background-color: $even-child-background-color;
         }
+    }
+
+    .modal{
+
+        color:black;
     }
 }
 
