--- a/reactjs/src/css/main.scss
+++ b/reactjs/src/css/main.scss
@@ -6,6 +6,7 @@
     //padding-inline: 30px;
     background-color: rgb(0, 48, 0);
     max-height: 60px;
+    max-width: 100%;
 
     a, a:hover, a:visited, a:link{
         color: white ; 
@@ -62,16 +63,18 @@
 
 .container{
     padding-block: 40px;
-    
+    box-sizing: border-box;
+
     .products-list{
         display: flex;
-        flex-direction: row;
         flex-wrap: wrap;
-        gap: 44px;
+        gap: 40px;
         justify-content: flex-start;
+        max-width: 100%;
+        box-sizing: border-box; /* Include padding and border in width calculation */
+     
         
         
-    
         .card{
             .ellipsify {
                 width: 100%;
@@ -103,3 +106,128 @@
 
 
 
+.open-support-tickets-chat{
+
+
+    float:right;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    font-size: 40px;
+}
+
+
+.support-tickets-chat{
+    position: fixed;
+    background-color: antiquewhite;
+    height: 50%;
+    width: 320px;
+    bottom: 0;
+    right: 0;
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    
+
+
+    .support-tickets-list{ 
+        position: relative;
+        height: max-content;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        gap: 6px;
+        overflow-x: scroll;
+        scrollbar-width: thin;    
+        width: 100%;
+
+
+        .close-chat{
+            position:absolute; 
+            right:0;
+        }
+
+        .support-ticket-item{
+            padding: 0px 2px;
+            .support-ticket-item-btn{
+                color:black;
+                background-color: rgb(204, 204, 204);
+                border:none;
+                outline: none;
+                height: 100%;
+
+                
+            }
+        }
+    }
+
+    .client-chat-modal-container{
+        position: absolute;
+        height: 90%;
+        float:inline-start;
+        width: 100%;
+
+        .chat-modal{
+            height: 85%;
+            width: 100%;
+        
+            
+            .messages-list-wrapper{
+                scrollbar-width: none;    
+                overflow-y: scroll;
+                height: 100%;
+                width: 100%;
+                display:flex;
+                flex-direction: column-reverse;
+            
+                .messages-list{
+                    
+                    height: 80%;
+                    .rce-mlist{
+                        display:flex;
+                        flex-direction: column-reverse;
+
+                        .rce-mbox{
+                            max-width: 75%;
+                        }
+                    }
+
+
+                    
+                }
+            }
+            
+            
+        
+            .send-message-container{
+                width: 85%;
+                position: absolute;
+                bottom: 20px;
+                
+                
+                justify-content: center;
+                padding-inline: 5%;
+        
+        
+                .send-message-form{
+                    display: flex;
+                    align-items: center;
+                    min-width: 100%;
+                    gap: 10px;
+                    .message-input-field{
+                        padding-inline: 10px;
+                        border-radius: 8px;
+                    }
+            
+                    .message-input-button{
+                        height: fit-content;
+                    }
+        
+        
+                }
+            }
+        }
+    }
+
+}
