Chat bug fix and refactoring
Instead of making two global files with gql tions and queries i made gql
folder in each folder in reactjs (admin, main and etc)

Changed imports in python made them cleaner

Also fixed a bug in support chat that if the chat is empty it making
infinite number of requests to backend

--- a/reactjs/src/css/adminpanel.scss
+++ b/reactjs/src/css/adminpanel.scss
@@ -77,7 +77,7 @@ $height-after-navbar: 94vh;
             }
 
             .create-button{
-                float:'right'
+                float:right;
             }
         }
     }
