--- a/reactjs/src/css/reviews.scss
+++ b/reactjs/src/css/reviews.scss
@@ -3,5 +3,55 @@
 
     .write-review{
         width: 60%;
+        
+        .upload-files{
+            padding-block: 20px;
+            input[type=file]::file-selector-button {
+                border: 1px solid #000000;
+                padding: 0.2em 0.4em;
+                border-radius: 0.2em;
+                background-color: white;
+                transition: 1s;
+            }
+        }
+
+        .write-review-textarea{
+            width:100%;
+            height: 150px; 
+            border-radius:8px;
+        }
+
+        .leave-review-btn{
+            float:right;
+        }
+
     }
+
+
+    .review-list-container{ 
+        padding-block: 2%;
+
+
+        .review-list{
+            list-style-type: none;
+            align-content: center;
+            margin: 0;
+            padding: 0px 1%;
+            .review-username-row{
+                display: inline-flex;
+                gap: 10px;
+                align-items: center;
+
+                h6{
+                    font-size: 16px;
+                    vertical-align: center;
+                    margin-bottom: 0;
+                }
+
+                
+            }
+        }
+    }
+
 }
+
