--- a/reactjs/src/css/reviews.scss
+++ b/reactjs/src/css/reviews.scss
@@ -13,6 +13,7 @@
                 background-color: white;
                 transition: 1s;
             }
+
         }
 
         .write-review-textarea{
@@ -53,5 +54,44 @@
         }
     }
 
+    .gallery-list{
+        margin:0; 
+        padding:0; 
+        list-style-type:none;
+
+        .gallery-list-element{
+            display:inline;
+            .gallery-list-img{
+                object-fit:contain;
+                height:150px;
+                width:150px;
+            }
+        }
+    }
+
+
+ 
+       
+    .fullscreen-image {
+        display: none; 
+        position: fixed; 
+        z-index: 1; 
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%; 
+        background-color: rgba(0,0,0,0.9); 
+
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+
+        img {
+            object-fit: contain;
+            max-height: 90vh;
+        }
+    }
+
 }
+
 
