Changed bodystyles import name
Changed bodystyles css imports, it wasnt working properly because I
stated different file name

--- a/reactjs/src/css/main.scss
+++ b/reactjs/src/css/main.scss
@@ -1,6 +1,6 @@
 @import '~bootstrap/scss/bootstrap.scss';
 
-@import './bodyStyles';
+@import './bodystyles.scss';
 
 .navbar{ 
     //padding-inline: 30px;
