support chat design and filters design
Better design for user side support chat

and better design for filter div in admin
panel

--- a/reactjs/src/css/adminpanel.scss
+++ b/reactjs/src/css/adminpanel.scss
@@ -171,7 +171,14 @@ $height-after-navbar: 94vh;
     float:right;
     display:flex;
     flex-direction: column;
-    background-color: antiquewhite;
+    background-color: rgb(136, 161, 136);
     position: relative;
+    border-radius: 4px;
+
+
+    .filters-content{
+        color: white;
+        padding: 4% 8%;
+    }
     
 }
