--- a/reactjs/src/css/main.scss
+++ b/reactjs/src/css/main.scss
@@ -3,49 +3,11 @@
 @import './bodystyles.scss';
 
 
-
-// .navbar{ 
-//     //padding-inline: 30px;
-//     background-color: rgb(0, 48, 0);
-//     max-height: 60px;
-//     max-width: 100%;
-
-//     a, a:hover, a:visited, a:link{
-//         color: white ; 
-//         font-size: 20px;
-//         text-decoration: none;
-//         position: relative;
-//         margin:0 10px;
-//     }
-
-//     form{
-//         padding-inline: 10%;
-//         flex: 2;
-        
-//     }
-
-//     .dropdown-menu{
-//         li{
-//             a{
-//                 color:black ;
-//                 font-size:14px;
-//             }
-//         }
-        
-//     }
-//     .dropdown-toggle{
-//         font-size:14px;
-//     }
-
-// }
-
-
 .navbar {
+    position: relative; /* Set the navbar as the relative container */
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding: 4px 15px;
-    max-width: 100%;
     background-color: rgb(0, 48, 0);
 
     a, a:hover, a:visited, a:link {
@@ -55,33 +17,43 @@
         margin: 0 10px;
     }
 
+    .center-container {
+        position: absolute; /* Take the center container out of the normal flow */
+        left: 50%; /* Start at 50% of the navbar width */
+        transform: translateX(-50%); /* Center the container */
+        display: flex;
+        align-items: center;
+        width: 30%;
+    }
+
     form {
-        display: flex; /* Align the form elements (search bar + buttons) in a row */
-        align-items: center; /* Vertically center the items */
-        justify-content: flex-start; /* Align the items to the left */
-        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        gap: 0;
         max-width: 600px;
-        margin: 0 auto;
-        gap: 0; /* Remove space between elements */
-        height: 40px; /* Set a consistent height for the form elements */
+
+        button {
+            height: 40px;
+            padding: 0 15px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+    
     }
 
-    .navbar form button {
-        height: 100%; /* Make the button take full height */
-        padding: 0 15px;
-        background-color: #5a67d8;
-        color: white;
-        border: 1px solid #ccc;
-        border-radius: 4px 0 0 4px; /* Rounded corners for the left side */
-        cursor: pointer;
-    }
-
-    .navbar form input[type="text"] {
-        height: 100%; /* Make the input take full height */
+   
+    form input[type="text"] {
+        height: 40px;
+        flex-grow: 1;
         padding: 0 10px;
         font-size: 16px;
         border: 1px solid #ccc;
-        border-radius: 0 4px 4px 0; /* Rounded corners for the right side */
+        border-radius: 0 4px 4px 0;
+    }
+
+    .navbar-nav {
+        display: flex;
+        align-items: center;
     }
 
     .dropdown-menu {
